# bazel-node-monorepo

./: BUILD.bazel  WORKSPACE  jest.config.js  package.json  tsconfig.json
apps/server/: BUILD.bazel  tsconfig.json
apps/server/src/: main.spec.ts  main.ts
libs/common/: BUILD.bazel  package.json
libs/common/error/: core.error.ts  index.ts
libs/common/src/error/: core.error.ts
libs/common/src/interface/: index.ts  pagination.interface.ts
